chore: Rename authorize to authorise
