# src/controllers/api/accreditation.ts
@@ -35,7 +35,7 @@ export class AccreditationController {
 		query('accreditationType')
 			.exists()
 			.isIn([
-				AccreditationRequestType.authorize,
+				AccreditationRequestType.authorise,
 				AccreditationRequestType.accredit,
 				AccreditationRequestType.attest,
 			])
@@ -49,32 +49,32 @@ export class AccreditationController {
 			.custom((value) => typeof value === 'string' || (Array.isArray(value) && typeof value[0] === 'string'))
 			.withMessage('schema type must be a string'),
 		body('parentAccreditation').optional().isString().withMessage('parentAccreditation must be a string').bail(),
-		body('rootAuthorization').optional().isString().withMessage('rootAuthorization must be a string').bail(),
+		body('rootAuthorisation').optional().isString().withMessage('rootAuthorisation must be a string').bail(),
 		body('trustFramework').optional().isString().withMessage('trustFramework must be a string').bail(),
 		body('trustFrameworkId').optional().isString().withMessage('trustFrameworkId must be a string').bail(),
 		query('accreditationType')
 			.custom((value, { req }) => {
-				const { parentAccreditation, rootAuthorization, trustFramework, trustFrameworkId } = req.body;
+				const { parentAccreditation, rootAuthorisation, trustFramework, trustFrameworkId } = req.body;
 
-				const hasParentOrRoot = parentAccreditation || rootAuthorization;
+				const hasParentOrRoot = parentAccreditation || rootAuthorisation;
 
 				if (
 					!hasParentOrRoot &&
 					(value === AccreditationRequestType.accredit || value === AccreditationRequestType.attest)
 				) {
-					throw new Error('parentAccreditation or rootAuthorization is required');
+					throw new Error('parentAccreditation or rootAuthorisation is required');
 				}
 
-				if (hasParentOrRoot && value === AccreditationRequestType.authorize) {
+				if (hasParentOrRoot && value === AccreditationRequestType.authorise) {
 					throw new Error(
-						'parentAccreditation or rootAuthorization is not required for an authorize operation'
+						'parentAccreditation or rootAuthorisation is not required for an authorise operation'
 					);
 				}
 
 				const hasTrustFramework = trustFramework && trustFrameworkId;
 
-				if (!hasTrustFramework && value === AccreditationRequestType.authorize) {
-					throw new Error('trustFramework and trustFrameworkId are required for an authorize operation');
+				if (!hasTrustFramework && value === AccreditationRequestType.authorise) {
+					throw new Error('trustFramework and trustFrameworkId are required for an authorise operation');
 				}
 
 				return true;
@@ -149,7 +149,7 @@ export class AccreditationController {
 	 *         schema:
 	 *           type: string
 	 *           enum:
-	 *              - authorize
+	 *              - authorise
 	 *              - accredit
 	 *              - attest
 	 *         required: true
@@ -196,7 +196,7 @@ export class AccreditationController {
 			schemas,
 			type,
 			parentAccreditation,
-			rootAuthorization,
+			rootAuthorisation,
 			trustFramework,
 			trustFrameworkId,
 			attributes,
@@ -259,7 +259,7 @@ export class AccreditationController {
 
 			let resourceType: string;
 			switch (accreditationType) {
-				case AccreditationRequestType.authorize:
+				case AccreditationRequestType.authorise:
 					resourceType = DIDAccreditationTypes.VerifiableAuthorisationForTrustChain;
 					credentialRequest.type = [...(type || []), resourceType];
 					credentialRequest.termsOfUse = {
@@ -274,7 +274,7 @@ export class AccreditationController {
 					credentialRequest.termsOfUse = {
 						type: resourceType,
 						parentAccreditation,
-						rootAuthorization,
+						rootAuthorisation,
 					};
 					break;
 				case AccreditationRequestType.attest:
@@ -283,7 +283,7 @@ export class AccreditationController {
 					credentialRequest.termsOfUse = {
 						type: resourceType,
 						parentAccreditation,
-						rootAuthorization,
+						rootAuthorisation,
 					};
 					break;
 			}
@@ -300,7 +300,7 @@ export class AccreditationController {
 					true,
 					false,
 					response.locals.customer,
-					rootAuthorization
+					rootAuthorisation
 				);
 
 				if (result.success === false) {
