# src/services/api/accreditation.ts
@@ -17,7 +17,7 @@ export class AccreditationService {
 		verifyStatus: boolean,
 		allowDeactivatedDid: boolean,
 		customer: CustomerEntity,
-		rootAuthorization?: string,
+		rootAuthorisation?: string,
 		policies?: VerificationPolicies
 	): Promise<SafeAPIResponse<{ verified: boolean }>> {
 		// Get strategy e.g. postgres or local
@@ -96,7 +96,7 @@ export class AccreditationService {
 			);
 
 			if (!initialVerifyResult) {
-				initialVerifyResult = { ...verifyResult, rootAuthorization };
+				initialVerifyResult = { ...verifyResult, rootAuthorisation };
 			}
 
 			if (verifyResult.error) {
@@ -134,12 +134,12 @@ export class AccreditationService {
 				isTypeAccreditation === DIDAccreditationTypes.VerifiableAccreditationToAttest
 			) {
 				const termsOfUse = accreditation.termsOfUse;
-				if (!termsOfUse || !termsOfUse.parentAccreditation || !termsOfUse.rootAuthorization) {
+				if (!termsOfUse || !termsOfUse.parentAccreditation || !termsOfUse.rootAuthorisation) {
 					return {
 						success: false,
 						status: StatusCodes.BAD_REQUEST,
 						data: initialVerifyResult,
-						error: `Error on verifying accreditation ${accreditationUrl}: Missing parentAccreditaiton and rootAuthorization in termsOfUse for accreditation: ${accreditationUrl}`,
+						error: `Error on verifying accreditation ${accreditationUrl}: Missing parentAccreditaiton and rootAuthorisation in termsOfUse for accreditation: ${accreditationUrl}`,
 					};
 				}
 
@@ -150,16 +150,16 @@ export class AccreditationService {
 				accreditedSubject = accreditorDid;
 				accreditedFor = accreditation.credentialSubject.accreditedFor;
 
-				if (rootAuthorization && rootAuthorization !== termsOfUse.rootAuthorization) {
+				if (rootAuthorisation && rootAuthorisation !== termsOfUse.rootAuthorisation) {
 					return {
 						status: StatusCodes.OK,
 						success: false,
 						data: initialVerifyResult,
-						error: `Error on verifying accreditation ${accreditationUrl}: Expected accreditation to be linked to root accreditation ${rootAuthorization}, but found it linked to DID ${termsOfUse.rootAuthorization} instead`,
+						error: `Error on verifying accreditation ${accreditationUrl}: Expected accreditation to be linked to root accreditation ${rootAuthorisation}, but found it linked to DID ${termsOfUse.rootAuthorisation} instead`,
 					};
 				}
 
-				rootAuthorization = termsOfUse.rootAuthorization;
+				rootAuthorisation = termsOfUse.rootAuthorisation;
 			} else {
 				return {
 					status: StatusCodes.OK,
