# src/static/swagger-api.json
@@ -557,16 +557,16 @@
             "description": "DID URL of the parent Verifiable Accreditation, required for accredit/attest operation.",
             "type": "string"
           },
-          "rootAuthorization": {
+          "rootAuthorisation": {
             "description": "DID URL of the root Verifiable Accreditation, required for accredit/attest operation.",
             "type": "string"
           },
           "trustFramework": {
-            "description": "Name or Type of the Trust Framework, required for authorize operation.",
+            "description": "Name or Type of the Trust Framework, required for authorise operation.",
             "type": "string"
           },
           "trustFrameworkId": {
-            "description": "Url of the Trust Framework, required for authorize operation.",
+            "description": "Url of the Trust Framework, required for authorise operation.",
             "type": "string"
           },
           "type": {
@@ -702,11 +702,11 @@
             }
           ],
           "format": "jwt",
-          "accreditationName": "authorizeAccreditation",
+          "accreditationName": "authoriseAccreditation",
           "trustFramework": "https://learn.cheqd.io/governance/start",
           "trustFrameworkId": "cheqd Governance Framework",
           "parentAccreditation": "did:cheqd:testnet:15b74787-6e48-4fd5-8020-eab24e990578?resourceName=accreditAccreditation&resourceType=VerifiableAccreditationToAccredit",
-          "rootAuthorization": "did:cheqd:testnet:5RpEg66jhhbmASWPXJRWrA?resourceName=authorizeAccreditation&resourceType=VerifiableAuthorisationForTrustChain",
+          "rootAuthorisation": "did:cheqd:testnet:5RpEg66jhhbmASWPXJRWrA?resourceName=authoriseAccreditation&resourceType=VerifiableAuthorisationForTrustChain",
           "credentialStatus": {
             "statusPurpose": "revocation",
             "statusListName": "employee-credentials",
@@ -2517,7 +2517,7 @@
             "schema": {
               "type": "string",
               "enum": [
-                "authorize",
+                "authorise",
                 "accredit",
                 "attest"
               ]
